--- a/web/admin/orders/test.html
+++ b/web/admin/orders/test.html
@@ -33,10 +33,10 @@
           @apply text-white bg-primary hover:bg-primaryLight focus:ring-4 focus:outline-none focus:ring-primaryLight font-medium rounded-lg text-sm px-5 py-2.5 text-center cursor-pointer;
         }
         .box {
-          @apply bg-white rounded-lg border flex flex-col;
+          @apply bg-white rounded-lg border flex flex-col overflow-hidden;
         }
         .box-title {
-          @apply font-bold text-xl font-mono py-2 px-5 border-b;
+          @apply font-bold text-xl font-mono py-2 px-5 border-b bg-gray-100 text-gray-600;
         }
         .box-body {
           @apply p-5 flex flex-col gap-3;
@@ -56,7 +56,7 @@
           @apply flex items-center  border rounded-lg py-2 text-center text-xs lg:text-sm hover:bg-gray-200 duration-300 ease-in-out;
         }
         .item-width {
-          @apply w-[18%];
+          @apply w-[20%];
         }
       }
     </style>
@@ -191,57 +191,155 @@
             </ol>
           </nav>
 
-          <div class="box">
-            <div class="box-title">Customers</div>
-            <div class="box-body">
-              <div class="list-header">
-                <div class="w-[10%] max-md:w-[20%]">User ID</div>
-                <div class="item-width max-md:hidden">Name</div>
-                <div class="item-width max-md:w-[40%]">Email</div>
-                <div class="item-width max-md:hidden">No of Orders</div>
-                <div class="item-width max-md:hidden">Status</div>
-                <div class="item-width max-md:hidden">Last login</div>
-                <div class="item-width max-md:w-[40%]">Actions</div>
+          <div class="flex gap-5">
+            <div class="w-[40%] flex flex-col gap-5">
+              <div class="box">
+                <div class="py-2 px-5 border-b flex justify-between bg-gray-100">
+                  <div class="font-bold text-xl font-mono text-gray-600">
+                    Customer Details<span class="text-gray-400">#12</span>
+                  </div>
+                  <div class="flex items-center gap-2">
+                    <span class="flex w-3 h-3 bg-green-500 rounded-full"></span
+                    >Active
+                  </div>
+                </div>
+                <div class="p-5 flex">
+                  <div class="flex flex-col gap-3 mr-5">
+                    <div class="flex gap-10">
+                      <div>
+                        <div class="text-gray-400 font-semibold">
+                          First Name
+                        </div>
+                        <div>Nipun</div>
+                      </div>
+                      <div>
+                        <div class="text-gray-400 font-semibold">Last Name</div>
+                        <div>Nipun</div>
+                      </div>
+                    </div>
+                    <div>
+                      <div class="text-gray-400 font-semibold">Email</div>
+                      <div>nipun123@gmail.com</div>
+                    </div>
+                    <div>
+                      <div class="text-gray-400 font-semibold">Birth Date</div>
+                      <div>2001-02-15</div>
+                    </div>
+                  </div>
+                  <div class="pl-5 border-l flex flex-col gap-3">
+                    <div>
+                      <div class="text-gray-400 font-semibold">
+                        Phone Number
+                      </div>
+                      <div>0715348561</div>
+                    </div>
+                    <div>
+                      <div class="text-gray-400 font-semibold">Last Login</div>
+                      <div>2001-02-15</div>
+                    </div>
+                    <div>
+                      <div class="text-gray-400 font-semibold">
+                        Registered Date
+                      </div>
+                      <div>2001-02-15</div>
+                    </div>
+                  </div>
+                </div>
               </div>
-              <div class="list-item justify-between">
-                <div class="w-[10%] max-md:w-[20%]">#1</div>
-                <a href="#" class="item-width max-md:hidden">John Doe</a>
-                <div class="item-width max-md:w-[40%]">
-                  nipunavishka123@gmail.com
+              <div class="bg-white p-5 rounded-lg text-sm flex flex-col gap-2">
+                <div class="flex justify-between">
+                  <div class="text-gray-400">Reset customer account password to default password.</div>
+                  <div class="normal">Reset</div>
                 </div>
-                <div class="item-width max-md:hidden">5</div>
-                <div
-                  class="item-width max-md:hidden flex items-center justify-center gap-1"
-                >
-                  <span class="flex w-3 h-3 bg-green-500 rounded-full"></span
-                  >Active
-                </div>
-                <div class="item-width max-md:hidden">2022-01-01</div>
-                <div
-                  class="item-width max-md:w-[40%] flex justify-center gap-1"
-                >
-                  <form action="#" class="reset">
-                    <input type="hidden" name="id" value="1" />
-                    <button
-                      class="border border-blue-600 bg-blue-600 py-1 px-2 flex gap-1 items-center rounded-lg text-white duration-300 hover:text-blue-600 hover:bg-white"
-                    >
-                      <i class="fa-solid fa-lock-open"></i>
-                      <div>Reset</div>
-                    </button>
-                  </form>
-                  <form action="#" class="block">
-                    <input type="hidden" name="id" value="1" />
-                    <button
-                      class="border border-red-600 bg-red-600 py-1 px-2 flex gap-1 items-center rounded-lg text-white duration-300 hover:text-red-600 hover:bg-white"
-                    >
-                      <i class="fa-solid fa-user-xmark"></i>
-                      <div>Block</div>
-                    </button>
-                  </form>
+                <div class="flex justify-between">
+                  <div class="text-gray-400">Block customer account.</div>
+                  <div class="remove">Block</div>
                 </div>
               </div>
-              <div class="list-item flex justify-center">
-                no user registered
+              <div class="box">
+                <div class="box-title">Most Viewed</div>
+                <div class="box-body">
+                  <div class="flex gap-3 font-semibold text-gray-400">
+                    <div>1.</div>
+                    <img
+                      src="../../img/demo.jpg"
+                      class="w-[100px] rounded-lg"
+                      alt=""
+                    />
+                    <div>
+                      <div>Nike Air Force 1</div>
+                      <div>#22</div>
+                      <div>
+                        LKR 7,000
+                        <span
+                          class="bg-green-200 rounded-full px-2 text-green-400"
+                          >15%</span
+                        >
+                      </div>
+                      <div>View Count <span class="text-gray-600">22</span></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="w-[60%] flex flex-col gap-5">
+              <div class="box">
+                <div class="box-title">Orders</div>
+                <div class="box-body">
+                  <div class="list-header">
+                    <div class="item-width">Date</div>
+                    <div class="item-width">Time</div>
+                    <div class="item-width">No of items</div>
+                    <div class="item-width">Amount</div>
+                    <div class="item-width">Status</div>
+                  </div>
+                  <a href="#" class="list-item">
+                    <div class="item-width">Date</div>
+                    <div class="item-width">Time</div>
+                    <div class="item-width">No of items</div>
+                    <div class="item-width">Amount</div>
+                    <div class="item-width">Status</div>
+                  </a>
+                  <div class="list-item justify-center">No Records Found</div>
+                </div>
+              </div>
+
+              <div class="box">
+                <div class="box-title">Address Book</div>
+                <div class="box-body text-sm">
+                  <div class="border py-3 px-5 rounded-lg flex flex-col gap-3">
+                    <div class="flex gap-10">
+                      <div>
+                        <div class="text-gray-400 font-semibold">
+                          First Name
+                        </div>
+                        <div>Nipun</div>
+                      </div>
+                      <div>
+                        <div class="text-gray-400 font-semibold">Last Name</div>
+                        <div>Avishka</div>
+                      </div>
+                      <div>
+                        <div class="text-gray-400 font-semibold">Email</div>
+                        <div>nipunavishka123@gmail.com</div>
+                      </div>
+                      <div>
+                        <div class="text-gray-400 font-semibold">Phone</div>
+                        <div>0715348561</div>
+                      </div>
+                    </div>
+                    <div>
+                      <div class="text-gray-400 font-semibold">Address</div>
+                      <div>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Excepturi placeat libero, voluptates omnis
+                        explicabo dolorem accusantium. Architecto tenetur optio
+                        maiores et excepturi fuga quam, quos laboriosam commodi,
+                        quo nemo ex?
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
