order activity process

--- a/web/admin/orders/test.html
+++ b/web/admin/orders/test.html
@@ -60,6 +60,10 @@
         }
       }
     </style>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="flex flex-col lg:flex-row min-h-screen">
@@ -142,33 +146,126 @@
         <div class="p-5 flex flex-col gap-5">
           <!-- body strat here -->
 
-          <nav class="flex" aria-label="Breadcrumb">
-            <ol
-              class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse"
-            >
-              <li class="inline-flex items-center">
-                <a
-                  href="../"
-                  class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white"
+          <div
+            class="w-[60%] bg-white rounded-lg shadow dark:bg-primary p-4 md:p-6"
+          >
+            <div class="flex justify-between">
+              <div>
+                <h5
+                  class="leading-none text-3xl font-bold text-gray-900 dark:text-white pb-2"
                 >
+                  32.4k
+                </h5>
+                <p
+                  class="text-base font-normal text-gray-500 dark:text-gray-400"
+                >
+                  Users this week
+                </p>
+              </div>
+              <div
+                class="flex items-center px-2.5 py-0.5 text-base font-semibold text-green-500 dark:text-green-500 text-center"
+              >
+                12%
+                <svg
+                  class="w-3 h-3 ms-1"
+                  aria-hidden="true"
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 10 14"
+                >
+                  <path
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M5 13V1m0 0L1 5m4-4 4 4"
+                  />
+                </svg>
+              </div>
+            </div>
+            <div id="area-chart"></div>
+            <div
+              class="grid grid-cols-1 items-center border-gray-200 border-t dark:border-gray-700 justify-between"
+            >
+              <div class="flex justify-between items-center pt-5">
+                <!-- Button -->
+                <button
+                  id="dropdownDefaultButton"
+                  data-dropdown-toggle="lastDaysdropdown"
+                  data-dropdown-placement="bottom"
+                  class="text-sm font-medium text-gray-500 dark:text-gray-400 hover:text-gray-900 text-center inline-flex items-center dark:hover:text-white"
+                  type="button"
+                >
+                  Last 7 days
                   <svg
-                    class="w-3 h-3 me-2.5"
+                    class="w-2.5 m-2.5 ms-1.5"
                     aria-hidden="true"
                     xmlns="http://www.w3.org/2000/svg"
-                    fill="currentColor"
-                    viewBox="0 0 20 20"
+                    fill="none"
+                    viewBox="0 0 10 6"
                   >
                     <path
-                      d="m19.707 9.293-2-2-7-7a1 1 0 0 0-1.414 0l-7 7-2 2a1 1 0 0 0 1.414 1.414L2 10.414V18a2 2 0 0 0 2 2h3a1 1 0 0 0 1-1v-4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v4a1 1 0 0 0 1 1h3a2 2 0 0 0 2-2v-7.586l.293.293a1 1 0 0 0 1.414-1.414Z"
+                      stroke="currentColor"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="m1 1 4 4 4-4"
                     />
                   </svg>
-                  Dashboard
-                </a>
-              </li>
-              <li aria-current="page">
-                <div class="flex items-center">
+                </button>
+                <!-- Dropdown menu -->
+                <div
+                  id="lastDaysdropdown"
+                  class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700"
+                >
+                  <ul
+                    class="py-2 text-sm text-gray-700 dark:text-gray-200"
+                    aria-labelledby="dropdownDefaultButton"
+                  >
+                    <li>
+                      <a
+                        href="#"
+                        class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
+                        >Yesterday</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        href="#"
+                        class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
+                        >Today</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        href="#"
+                        class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
+                        >Last 7 days</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        href="#"
+                        class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
+                        >Last 30 days</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        href="#"
+                        class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
+                        >Last 90 days</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+                <a
+                  href="#"
+                  class="uppercase text-sm font-semibold inline-flex items-center rounded-lg text-blue-600 hover:text-blue-700 dark:hover:text-blue-500 hover:bg-gray-100 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700 px-3 py-2"
+                >
+                  Users Report
                   <svg
-                    class="rtl:rotate-180 w-3 h-3 text-gray-400 mx-1"
+                    class="w-2.5 h-2.5 ms-1.5 rtl:rotate-180"
                     aria-hidden="true"
                     xmlns="http://www.w3.org/2000/svg"
                     fill="none"
@@ -182,177 +279,124 @@
                       d="m1 9 4-4-4-4"
                     />
                   </svg>
-                  <span
-                    class="ms-1 text-sm font-medium text-gray-500 md:ms-2 dark:text-gray-400"
-                    >Orders</span
-                  >
-                </div>
-              </li>
-            </ol>
-          </nav>
-
-          <div class="flex flex-col lg:flex-row gap-5">
-            <div class="lg:w-[40%] flex flex-col gap-5">
-              <div class="box">
-                <div
-                  class="py-2 px-5 border-b flex justify-between bg-gray-100"
-                >
-                  <div class="font-bold text-xl font-mono text-gray-600">
-                    Customer Details<span class="text-gray-400">#12</span>
-                  </div>
-                  <div class="flex items-center gap-2">
-                    <span class="flex w-3 h-3 bg-green-500 rounded-full"></span
-                    >Active
-                  </div>
-                </div>
-                <div class="p-5 flex">
-                  <div class="flex flex-col gap-3 mr-5">
-                    <div class="flex gap-10">
-                      <div>
-                        <div class="text-gray-400 font-semibold">
-                          First Name
-                        </div>
-                        <div>Nipun</div>
-                      </div>
-                      <div>
-                        <div class="text-gray-400 font-semibold">Last Name</div>
-                        <div>Nipun</div>
-                      </div>
-                    </div>
-                    <div>
-                      <div class="text-gray-400 font-semibold">Email</div>
-                      <div>nipun123@gmail.com</div>
-                    </div>
-                    <div>
-                      <div class="text-gray-400 font-semibold">Birth Date</div>
-                      <div>2001-02-15</div>
-                    </div>
-                  </div>
-                  <div class="pl-5 border-l flex flex-col gap-3">
-                    <div>
-                      <div class="text-gray-400 font-semibold">
-                        Phone Number
-                      </div>
-                      <div>0715348561</div>
-                    </div>
-                    <div>
-                      <div class="text-gray-400 font-semibold">Last Login</div>
-                      <div>2001-02-15</div>
-                    </div>
-                    <div>
-                      <div class="text-gray-400 font-semibold">
-                        Registered Date
-                      </div>
-                      <div>2001-02-15</div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="bg-white p-5 rounded-lg text-sm flex flex-col gap-2">
-                <div class="flex justify-between">
-                  <div class="text-gray-400">
-                    Reset customer account password to default password.
-                  </div>
-                  <div class="normal">Reset</div>
-                </div>
-                <div class="flex justify-between">
-                  <div class="text-gray-400">Block customer account.</div>
-                  <div class="remove">Block</div>
-                </div>
-              </div>
-              <div class="box">
-                <div class="box-title">Most Viewed</div>
-                <div class="box-body">
-                  <div class="flex gap-3 font-semibold text-gray-400">
-                    <div>1.</div>
-                    <img
-                      src="../../img/demo.jpg"
-                      class="w-[100px] rounded-lg"
-                      alt=""
-                    />
-                    <div>
-                      <div>Nike Air Force 1</div>
-                      <div>#22</div>
-                      <div>
-                        LKR 7,000
-                        <span
-                          class="bg-green-200 rounded-full px-2 text-green-400"
-                          >15%</span
-                        >
-                      </div>
-                      <div>
-                        View Count <span class="text-gray-600">22</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="lg:w-[60%] flex flex-col gap-5">
-              <div class="box">
-                <div class="box-title">Orders</div>
-                <div class="box-body">
-                  <div class="list-header">
-                    <div class="item-width">Date</div>
-                    <div class="item-width">Time</div>
-                    <div class="item-width">No of items</div>
-                    <div class="item-width">Amount</div>
-                    <div class="item-width">Status</div>
-                  </div>
-                  <a href="#" class="list-item">
-                    <div class="item-width">Date</div>
-                    <div class="item-width">Time</div>
-                    <div class="item-width">No of items</div>
-                    <div class="item-width">Amount</div>
-                    <div class="item-width">Status</div>
-                  </a>
-                  <div class="list-item justify-center">No Records Found</div>
-                </div>
-              </div>
-
-              <div class="box">
-                <div class="box-title">Address Book</div>
-                <div class="box-body text-sm">
-                  <div class="border py-3 px-5 rounded-lg flex flex-col gap-3">
-                    <div class="flex gap-5 lg:gap-10 flex-wrap">
-                      <div>
-                        <div class="text-gray-400 font-semibold">
-                          First Name
-                        </div>
-                        <div>Nipun</div>
-                      </div>
-                      <div>
-                        <div class="text-gray-400 font-semibold">Last Name</div>
-                        <div>Avishka</div>
-                      </div>
-                      <div>
-                        <div class="text-gray-400 font-semibold">Email</div>
-                        <div>nipunavishka123@gmail.com</div>
-                      </div>
-                      <div>
-                        <div class="text-gray-400 font-semibold">Phone</div>
-                        <div>0715348561</div>
-                      </div>
-                    </div>
-                    <div>
-                      <div class="text-gray-400 font-semibold">Address</div>
-                      <div>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing
-                        elit. Excepturi placeat libero, voluptates omnis
-                        explicabo dolorem accusantium. Architecto tenetur optio
-                        maiores et excepturi fuga quam, quos laboriosam commodi,
-                        quo nemo ex?
-                      </div>
-                    </div>
-                  </div>
-                </div>
+                </a>
               </div>
             </div>
           </div>
-
+          <button onclick="ff()" type="button">aa</button>
           <!-- body end here -->
         </div>
       </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+    <script>
+      var data = [
+        6500, 6418, 6456, 6526, 6456, 6456, 8900, 6500, 6418, 6456, 6526, 6456,
+        6456, 8900,
+      ];
+      function ff() {
+        chart.updateSeries([
+          {
+            data: [342, 442, 311, 421, 212],
+          },
+          {
+            data: [322, 422, 301, 401, 202],
+          },
+        ]);
+      }
+      var options = {
+        chart: {
+          height: "100%",
+          maxWidth: "100%",
+          type: "area",
+          fontFamily: "Inter, sans-serif",
+          dropShadow: {
+            enabled: false,
+          },
+          toolbar: {
+            show: false,
+          },
+        },
+        tooltip: {
+          enabled: true,
+          x: {
+            show: false,
+          },
+        },
+        fill: {
+          type: "gradient",
+          gradient: {
+            opacityFrom: 0.55,
+            opacityTo: 0,
+            shade: "#1C64F2",
+            gradientToColors: ["#1C64F2"],
+          },
+        },
+        dataLabels: {
+          enabled: false,
+        },
+        stroke: {
+          width: 6,
+        },
+        grid: {
+          show: false,
+          strokeDashArray: 4,
+          padding: {
+            left: 2,
+            right: 2,
+            top: 0,
+          },
+        },
+        series: [
+          {
+            name: "Developer Edition",
+            data: [150, 141, 145, 152, 135, 125],
+            color: "#1A56DB",
+          },
+          {
+            name: "Designer Edition",
+            data: [64, 41, 76, 41, 113, 173],
+            color: "#7E3BF2",
+          },
+        ],
+        xaxis: {
+          categories: [
+            "01 February",
+            "02 February",
+            "03 February",
+            "04 February",
+            "05 February",
+            "06 February",
+            "07 February",
+            "08 February",
+            "09 February",
+            "10 February",
+            "11 February",
+            "12 February",
+            "13 February",
+            "14 February",
+          ],
+          labels: {
+            show: false,
+          },
+          axisBorder: {
+            show: false,
+          },
+          axisTicks: {
+            show: false,
+          },
+        },
+        yaxis: {
+          show: false,
+        },
+      };
+
+      const chart = new ApexCharts(
+        document.getElementById("area-chart"),
+        options
+      );
+      chart.render();
+    </script>
   </body>
 </html>
